--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build and run:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 12
 
+      - run: npm install
       - run: npm run build
 
       - uses: w9jds/firebase-action@master
