--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-brands-svg-icons": "^5.13.0",
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
