--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "twentyfive-dev",
     "version": "1.0.0",
+    "homepage": "https://twentyfivesoftware.github.io/twentyfive.dev/",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -14,8 +15,8 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -31,5 +32,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.1.0"
     }
 }
