--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "twentyfive-dev",
     "version": "1.0.0",
-    "homepage": "https://twentyfivesoftware.github.io/twentyfive.dev/",
+    "homepage": "https://twentyfive.dev",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-brands-svg-icons": "^5.13.0",
