--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@fortawesome/react-fontawesome": "^0.1.9",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-reveal": "^1.2.2",
         "react-scripts": "3.4.1"
     },
     "scripts": {
