--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
     "version": "1.0.0",
     "homepage": "https://twentyfive.dev",
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.28",
-        "@fortawesome/free-brands-svg-icons": "^5.13.0",
-        "@fortawesome/free-regular-svg-icons": "^5.13.0",
-        "@fortawesome/free-solid-svg-icons": "^5.14.0",
-        "@fortawesome/react-fontawesome": "^0.1.9",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-reveal": "^1.2.2",
-        "react-scripts": "3.4.1"
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-brands-svg-icons": "^5.15.2",
+        "@fortawesome/free-regular-svg-icons": "^5.15.2",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
+        "@fortawesome/react-fontawesome": "^0.1.14",
+        "@types/node": "^14.14.21",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "node-sass": "^4.14.1",
+        "react": "^17.0.1",
+        "react-awesome-reveal": "^3.7.0",
+        "react-dom": "^17.0.1",
+        "react-scripts": "4.0.1",
+        "typescript": "^4.1.3"
     },
     "scripts": {
         "start": "react-scripts start",
