--- a/package.json
+++ b/package.json
@@ -2,44 +2,31 @@
     "name": "twentyfive-dev",
     "version": "1.0.0",
     "homepage": "https://twentyfive.dev",
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.34",
-        "@fortawesome/free-brands-svg-icons": "^5.15.2",
-        "@fortawesome/free-regular-svg-icons": "^5.15.2",
-        "@fortawesome/free-solid-svg-icons": "^5.15.2",
-        "@fortawesome/react-fontawesome": "^0.1.14",
-        "@types/node": "^14.14.21",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "node-sass": "^4.14.1",
-        "react": "^17.0.1",
-        "react-awesome-reveal": "^3.7.0",
-        "react-dom": "^17.0.1",
-        "react-scripts": "4.0.1",
-        "typescript": "^4.1.3"
-    },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "start": "parcel serve ./public/index.html",
+        "build": "parcel build ./public/index.html"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-brands-svg-icons": "^5.15.3",
+        "@fortawesome/free-regular-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
+        "react": "^17.0.2",
+        "react-awesome-reveal": "^3.7.1",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
-        "gh-pages": "^3.1.0"
-    }
+        "@parcel/transformer-sass": "next",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.3",
+        "parcel": "next"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/TwentyFiveSoftware/twentyfive.dev.git"
+    },
+    "browserslist": [
+        "> 0.2%"
+    ]
 }
