--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "homepage": "https://twentyfive.dev",
     "scripts": {
         "start": "parcel serve ./public/index.html",
-        "build": "parcel build ./public/index.html"
+        "build": "parcel build ./public/index.html",
+        "lint": "eslint --ext ts,tsx --fix src"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -20,7 +21,16 @@
         "@parcel/transformer-sass": "next",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
-        "parcel": "next"
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
+        "eslint": "^7.24.0",
+        "eslint-config-prettier": "^8.2.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "parcel": "next",
+        "prettier": "^2.2.1",
+        "typescript": "^4.2.4"
     },
     "repository": {
         "type": "git",
