--- a/package.json
+++ b/package.json
@@ -14,29 +14,38 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
         "react": "^17.0.2",
-        "react-awesome-reveal": "^3.7.1",
+        "react-awesome-reveal": "^3.7.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
         "@parcel/transformer-sass": "next",
-        "@types/react": "^17.0.3",
-        "@types/react-dom": "^17.0.3",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "eslint": "^7.24.0",
-        "eslint-config-prettier": "^8.2.0",
+        "@types/react": "^17.0.9",
+        "@types/react-dom": "^17.0.6",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
+        "eslint": "^7.28.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "parcel": "next",
-        "prettier": "^2.2.1",
-        "typescript": "^4.2.4"
+        "prettier": "^2.3.1",
+        "typescript": "^4.3.2"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/TwentyFiveSoftware/twentyfive.dev.git"
     },
-    "browserslist": [
-        "> 0.2%"
-    ]
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
